   
===========
Changes log  
===========

- @version-full@ (@release-date@)

- 2.3.2
    - Bugs fixed
        - Fix CORS header name Access-Control-Allow-Credentials. Issue #1030

    - Enhancements
      -

- 2.3.1 (02/03/2015)
    - Bugs fixed
      - Reintroduced registration by default of the internal HTTP server 
        connectors in JEE edition.
      - FormDataSet not properly serializing text/plain files. Issue #1006.
        Reported by johnjaylward.
      - Fixed fileupload extension for GAE and JEE editions.
      - Fixed potential NPE. Issue #1004.
        Reported by Philippe Perrault.
      - Reference scheme reverts to http when using https. Issue #998.
        Reported by Stephen C. Pope.
      - Fixed bug that prevented client code to properly consume error 
        responses #1004 and #1018.
        Reported by Philippe Perrault and spraguep.

    - Enhancements
      - 

- 2.3.0 (12/17/2014)
    - Bugs fixed
      - Fixed usage of custom Component with ServerServlet (issue #926).
        Reported by Graham Smith.
      - StatusService didn't copy the contactEmail and homeRef property
        to the internal serialized status object.
      - JacksonRepresentation fields are now thread safe.
        Reported by Tim Peierls.
      - Removed XML serialization using Jackson extension from Android edition as 
        it depends on classes not supported by Android SDK (issue #964).
        Reported by Ralph van Etten.
      - Fixed OutputRepresentation in the GAE edition (issue #954).
        Reported by Edouard Mercier.

    - Enhancements
      - Upgraded Google App Engine API to version 1.9.15.
      - Upgraded Jackson to version 2.4.4.
      - Upgraded Woodstox to version 4.3.0.
      - Upgraded GSon to version 2.3.1.
      - Upgraded Jetty to version 9.2.6.

- 2.3 Release Candidate 2 (12/08/2014)
    - Bugs fixed
      - Restored HTML variant of error status representations returned by default.